Fix wrap of card-item

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ header {
 .main-content {
     width: 100%;
     max-width: 1440px;
-    margin-top: 135px;
+    margin-top: 50px;
     padding: 0 20px;
 }
 
@@ -150,7 +150,6 @@ header {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    justify-content: flex-start;
 }
 
 .item {
